<resources>
    <string name="app_name">Artemis</string>
    <string name="alliance_content_description">alliance</string>
    <string name="artemis">ARTEMIS</string>
    <string name="select_outpost">Select Outpost</string>
    <string name="select_breeder_code">Select Breeder Agent code</string>
    <string name="flower_image_collection_app">Flower Image Collection app</string>
    <string name="otptext">otptext</string>
    <string name="login">Login</string>
    <string name="agent_login">Agent Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Gallery</string>
    <string name="title_notifications">Notifications</string>
    <string name="image_capture_batches">Image Capture Batches</string>
    <string name="add_new_batch">Add new batch</string>
    <string name="keep_track_of_image_data_sync">Keep Track of Image Data Sync</string>
    <string name="image_sync_status">Image Sync Status</string>
    <string name="sync">Sync</string>
    <string-array name="season_array">
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Autumn</item>
    </string-array>
    <string-array name="climate_array">
        <item>Tropical</item>
        <item>Dry</item>
        <item>Temperate</item>
        <item>Continental</item>
        <item>Polar</item>
    </string-array>
</resources>